[gh-pages] edit links

--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <title>jquery.ghostFormat by Abdul Miah</title>
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.min.css">
@@ -19,9 +19,9 @@
         <p>jQuery plugin for formatting inputs</p>
         <p class="view"><a href="http://github.com/miahabdu/jquery.ghostFormat">View the Project on GitHub <small>miahabdu/jquery.ghostFormat</small></a></p>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/miahabdu/jquery.ghostFormat/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/miahabdu/jquery.ghostFormat/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="http://github.com/miahabdu/jquery.ghostFormat">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
